--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Hello World</title>
-</head>
+  </head>
 
-<body>
-
-   
-    
-
-    
-</body>
-
+  <body></body>
 </html>
