--- a/link.html
+++ b/link.html
@@ -9,7 +9,7 @@
       <!-- comment line-->
       <a href="https://www.google.com" target="_blank" title="open google">Google</a>
       <br />
-      <a href="lyrics.html">lyrics</a>
+      <a href="lyric.html">lyrics</a>
       <br />
       <a href="mailto:test@fake.com">email me</a>
 </body>
